[package]
name = "cell_spinner"
version = "0.7.0"
authors = ["Giacomo Gropplero <giacomo@gropplero.com"]
edition = "2021"
rust-version = "1.65"

[[bin]]
name = "cell_spinner"
path = "src/main.rs"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1.15"

[package.metadata.winresource]
FileDescription = "Cell Spinner"
LegalCopyright = "Copyright © 2023 - Giacomo Gropplero"


[dependencies]
egui = "0.22.0"
eframe = { version = "0.22.0", default-features = false, features = ["glow"] }
egui-toast = { git = "https://github.com/Ultrajackstr/egui-toast.git" }
egui_dock = "0.6.2"

serde = { version = "1", features = ["derive"] }
serde_json = "1.0.96"

tracing-subscriber = "0.3.17"
tracing = "0.1.37"
log-panics = "2.1.0"

image = "0.24.6"
chrono = "0.4.26"
anyhow = "1.0.71"
dashmap = "5.4.0"
serialport = "4.2.1"
rfd = "0.11.4"
#stepgen_new = { path = "../stepgen_new" }
stepgen_new = { git = "ssh://git@github.com/Ultrajackstr/stepgen_new.git", branch = "time" }
fugit = "0.3.7"

catppuccin-egui = "3.0.0"
dirs = "5.0.1"
walkdir = "2.3.3"
trash = "3.0.3"

[profile.release]
opt-level = 3
lto = true


# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
